fix(clojure-mcp): update wrapper script to auto-start nREPL server